kubernetes/kubernetes/main/apps/media/archivebox/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: archivebox-ingress
  annotations:
    gethomepage.dev/description: Archiving articles and sites
    gethomepage.dev/enabled: "true"
    gethomepage.dev/group: Media
    gethomepage.dev/icon: archivebox.png
    gethomepage.dev/name: ArchiveBox
    gethomepage.dev/pod-selector: "app=archivebox"
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: ca-server-cluster-issuer
    cert-manager.io/common-name: archivebox.internal
spec:
  tls:
    - hosts:
      - archivebox.internal
      secretName: archivebox-ing-cert
  ingressClassName: nginx
  rules:
  - host: archivebox.internal
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: archivebox
            port:
              number: 8000
